fix input on smaller screens

--- a/src/styles/components/input.less
+++ b/src/styles/components/input.less
@@ -71,3 +71,15 @@ input[type="number"].is-error {
   }
 
 }
+
+@media @small {
+
+  textarea,
+  input[type="text"],
+  input[type="email"],
+  input[type="password"],
+  input[type="number"] {
+    max-width: 100%;
+  }
+
+}
